# bevy_prototype_syntax_highlighting

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
assets/: code.rs
src/: main.rs
